--- a/requirements.txt
+++ b/requirements.txt
@@ -10,10 +10,16 @@ click==8.3.1
 comm==0.2.3
 debugpy==1.8.17
 decorator==5.2.1
+dnspython==2.8.0
 ecdsa==0.19.1
+email-validator==2.3.0
 exceptiongroup==1.3.1
 executing==2.2.1
 fastapi==0.123.0
+fastapi-cli==0.0.16
+fastapi-cloud-cli==0.6.0
+fastar==0.8.0
+git-filter-repo==2.47.0
 h11==0.16.0
 httpcore==1.0.9
 httptools==0.7.1
@@ -23,9 +29,13 @@ iniconfig==2.3.0
 ipykernel==7.1.0
 ipython==8.37.0
 jedi==0.19.2
+Jinja2==3.1.6
 jupyter_client==8.6.3
 jupyter_core==5.9.1
+markdown-it-py==4.0.0
+MarkupSafe==3.0.3
 matplotlib-inline==0.2.1
+mdurl==0.1.2
 nest-asyncio==1.6.0
 packaging==25.0
 parso==0.8.5
@@ -50,7 +60,12 @@ python-jose==3.5.0
 python-multipart==0.0.20
 PyYAML==6.0.3
 pyzmq==27.1.0
+rich==14.2.0
+rich-toolkit==0.17.0
+rignore==0.7.6
 rsa==4.9.1
+sentry-sdk==2.47.0
+shellingham==1.5.4
 six==1.17.0
 SQLAlchemy==2.0.44
 stack-data==0.6.3
@@ -58,8 +73,10 @@ starlette==0.50.0
 tomli==2.3.0
 tornado==6.5.2
 traitlets==5.14.3
+typer==0.20.0
 typing-inspection==0.4.2
 typing_extensions==4.15.0
+urllib3==2.6.0
 uvicorn==0.38.0
 uvloop==0.22.1
 watchfiles==1.1.1
